--- a/package.json
+++ b/package.json
@@ -70,6 +70,7 @@
       "**/*.(t|j)s"
     ],
     "coverageDirectory": "../coverage",
-    "testEnvironment": "node"
+    "testEnvironment": "node",
+    "silent": true
   }
 }
